# E-commerce

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  github-actions-demo.yml
app/: admin.py  urls.py
app/forms/: __init__.py  login_form.py  registration_form.py  set_user_password_form.py  user_password_change_form.py  user_password_reset_form.py
app/models/: __init__.py  cart_model.py  customer_model.py  order_model.py  product_model.py
app/selectors/: __init__.py  base_selector.py  cart_selector.py  customer_selector.py  order_selector.py  product_selector.py
app/serializers/: __init__.py  cart_serializer.py  customer_serializer.py  order_serializer.py  product_serializer.py
app/services/: __init__.py  base_service.py  cart_service.py  customer_service.py  order_service.py  product_service.py
app/utils/: __init__.py  base_model.py  custom_paginator.py
app/viewsets/: __init__.py  cart_viewset.py  customer_viewset.py  order_viewset.py  product_viewset.py
nginx/: nginx.conf
project/: settings.py  urls.py
