[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["nasif raihan <nasif.raihan78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
djangorestframework = "^3.15.2"
environs = "^14.1.1"
pillow = "^11.1.0"
drf-spectacular = "^0.28.0"
drf-spectacular-sidecar = "^2025.3.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
